update zed config - default terminal

--- a/dot_config/zed/private_settings.json
+++ b/dot_config/zed/private_settings.json
@@ -9,8 +9,8 @@
 {
   "terminal": {
     "shell": {
-      "program": "sh"
-    }
+      "program": "zsh",
+    },
   },
   "project_panel": {
     "hide_hidden": true,
