update zed configs

--- a/dot_config/zed/private_settings.json
+++ b/dot_config/zed/private_settings.json
@@ -13,7 +13,8 @@
     },
   },
   "project_panel": {
-    "hide_hidden": true,
+    "hide_gitignore": false,
+    "hide_hidden": false,
   },
   "buffer_font_family": "CaskaydiaMono Nerd Font Mono",
   "ui_font_family": ".ZedSans",
